--- a/CFAStudentTracker/CFAStudentTracker/Views/Queues/Details.cshtml
+++ b/CFAStudentTracker/CFAStudentTracker/Views/Queues/Details.cshtml
@@ -3,48 +3,50 @@
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
-
-<div>
-    <h4>Queue</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.QueueDescription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.QueueDescription)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Group.GroupName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Group.GroupName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Queue2.QueueDescription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Queue2.QueueDescription)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.QueueOrder.QueueOrderDescription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.QueueOrder.QueueOrderDescription)
-        </dd>
-
-    </dl>
-</div>
+@* Files in queue & Users in queue & queue Group manager *@
+<h2>@Model.QueueDescription </h2>
+        <h4>Manage</h4>
+        <hr />
+    <div class="col-lg-4">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                Manage Files
+            </div>
+            <div class="panel-body">
+                <p>
+                    Add, view, remove, and prioritize files in queue.
+                </p>
+                @Html.ActionLink("Manage", "../Processings/Index", new { id = Model.QueueID }, htmlAttributes: new { @class = "btn btn-primary btn-xs" })
+                </div>
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                Manage Users
+            </div>
+            <div class="panel-body">
+                <p>
+                    Add or remove users from queue
+                </p>
+                @Html.ActionLink("Manage", "Edit", new { id = Model.QueueID }, htmlAttributes: new { @class = "btn btn-primary btn-xs" })
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                Manage Queue Group
+            </div>
+            <div class="panel-body">
+                <p>
+                    Manage the workflow of queues in group
+                </p>
+                @Html.ActionLink("Manage", "Edit", new { id = Model.QueueID }, htmlAttributes: new { @class = "btn btn-primary btn-xs" })
+            </div>
+        </div>
+    </div>
+              
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.QueueID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
