--- a/CFAStudentTracker/CFAStudentTracker/Views/Shared/_Layout.cshtml
+++ b/CFAStudentTracker/CFAStudentTracker/Views/Shared/_Layout.cshtml
@@ -190,13 +190,13 @@
                             <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Management<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    @Html.ActionLink("Queue", "../UserQueue/Index")
+                                    @Html.ActionLink("Queue", "../Queues/Index")
                                 </li>
                                 <li>
                                     @Html.ActionLink("Reject", "../UserQueue/Index")
                                 </li>
                                 <li>
-                                    @Html.ActionLink("Error", "../UserQueue/Index")
+                                    @Html.ActionLink("Error", "../Queues/Index")
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
